feat: adicionar novos administradores
